--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 	    
       <p>I&#39ve always been a big fan or rock music. I love everything from classic rock to more mellow alternative stuff like Radiohead, Bon Iver, and even some progressive rock and metal.</p> 
 	
-	</section>
+</section>
 	<footer class= "content-footer">
 		<p>Say hi to me on these social networks:</p>
 		<ul class="social">
-    <li style="color:#0A294F"><a href="https://github.com/">Github</a></li>
-		<li><a href="https://twitter.com/?lang=en">Twitter</a></li>
-		<li><a href="https://plus.google.com/up/search">Google+</a></li>
-    </ul>
+	    	<li><a href="https://github.com/jgonzo127">Github</a></li>
+			<li><a href="https://www.facebook.com/jordan.gonzales1">Facebook</a></li>
+			<li><a href="https://plus.google.com/100514688037886973756/about/p/pub">Google+</a></li>
+	    </ul>
 
 	</footer>
 
