--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 	<footer class= "content-footer">
 		<p>Say hi to me on these social networks:</p>
 		<ul class="social">
-    <li style="color:#0A294F"><a href="https://github.com/">Github</a></li>
-		<li><a href="https://twitter.com/?lang=en">Twitter</a></li>
-		<li><a href="https://plus.google.com/up/search">Google+</a></li>
+    	<li><a href="https://github.com/jgonzo127">Github</a></li>
+		<li><a href="https://www.facebook.com/jordan.gonzales1">Facebook</a></li>
+		<li><a href="https://plus.google.com/u/0/100514688037886973756/posts">Google+</a></li>
     </ul>
 
 	</footer>
